# Minimax-AI-Checkers

./: .gitignore  .gitmodules  AI.cpp  AI.h  Board.cpp  Board.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Checker.cpp  Checker.h  Checkers_01.cbp  GameManager.cpp  GameManager.h  Makefile  Move.cpp  Move.h  Parser.cpp  Parser.h  Player.h  Rules.cpp  Rules.h  cmake_install.cmake  main.cpp  readme.md
include/internal/: AI.h  AI_Evaluation_Impl_01.h  AI_Evaluation_Impl_02.h  AI_Evaluation_Impl_03.h  AI_Evaluation_Impl_04.h  AI_Evaluation_Impl_05.h  AI_Evaluation_Impl_06.h  AI_Evaluation_Impl_07.h  AI_Minimax_01.h  AI_Minimax_02.h  AI_Minimax_03.h  AI_Minimax_04.h  Board.h  Checker.h  Color.h  GameManager.h  Move.h  Node.h  NodeTree.h  Parser.h  Player.h  Rules.h
src/main/: Board.cpp  Board.h  GameManager.cpp  GameManager.h  Rules.cpp  Rules.h  main.cpp
src/main/AI/: AI.cpp  AI.h  AI_Minimax_01.cpp  AI_Minimax_01.h  AI_Minimax_02.cpp  AI_Minimax_02.h  AI_Minimax_03.cpp  AI_Minimax_03.h  AI_Minimax_04.cpp  MinimaxTree.cpp  MinimaxTree.h  Node.cpp  Node.h  NodeTree.cpp
src/main/AI/Minimax-Evaluation/: AI_Evaluation_Impl_01.cpp  AI_Evaluation_Impl_02.cpp  AI_Evaluation_Impl_03.cpp  AI_Evaluation_Impl_04.cpp  AI_Evaluation_Impl_05.cpp  AI_Evaluation_Impl_06.cpp  AI_Evaluation_Impl_07.cpp
src/main/POCO/: Checker.cpp  Checker.h  Move.cpp  Move.h
src/main/human/: Parser.cpp  Parser.h
src/main/misc/: Color.h  Player.h
src/test/: AI_Tests.cpp  Board_Tests.cpp  Board_Tests.h  Main_Tests.cpp  Node_Tests.cpp  Rules_Tests.cpp  tests-Board.cpp  tests-Board.h  tests-main.cpp
